css/style.css
html,body {
  width:100%;
  height: 100%;
  margin: 0;
  min-width: 350px;
}
body {
  display: grid;
  grid-template-rows: 64px 1fr;
  grid-template-areas:"header"
                      "section";
  background-color: #e8e8e8;   
}
header {
  grid-area: header;
  background-color: #ffbb00;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}


.title {
  font-family: 'Product Sans',Arial,sans-serif;
  font-size: 22px;
  font-weight: 500;
}
.title span {
  font-weight: bolder;
  display: none
}
.searcher-header{
  display: none;
  visibility: hidden;
  border: none;
  background-color: rgba(136, 132, 132, 0.178);
  height: 100%;
  width: 35%;
  border-radius: 3px;
  padding-left: 35px;
  min-width: 100px;
}

header div.visible-s{
  display: none;
  visibility: hidden;
}

.searcher-header:focus{
  background-color: white;
  outline: none;
}
.content {
  grid-area: section;
  display: grid;
  padding: 25px;
  grid-template-rows: 46px repeat(auto-fill,minmax(120px,1fr)) ;
  grid-template-columns: repeat(auto-fill,minmax(240px,1fr)) ;
  grid-gap: 10px 20px;   
}
.div-shadow-open {
  grid-area: section;
  display: grid;
  background-color: rgba(5, 5, 5, 0.918);
  opacity: 0.2;
  z-index:2;
}
.div-shadow-closed {
  z-index:-5;
}
.searcher-content {
  grid-row: 1 / 2;
  grid-column: 1 / -1;
  border: none;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  box-shadow: 0.2px 1px 5px gray;
  outline: none;
  padding: 5px;
  
}
.content-notes {
  padding: 10px;
  background-color: white;
  box-shadow: 2px 2px 5px gray;
}
.content-notes>p {
  font-family: 'Patrick Hand', cursive;
  font-size: 21px;
  font-weight: 500px;
}
.content, .navigation {
  background-color: #e8e8e8;
  overflow-y: auto;
}
.navigation{
  grid-area:section;
  margin-left: -250px;
  width:fit-content;
  flex-direction:column;
  transition: margin-left 2s ease;    
}
.navigation-items {
  display: flex;
  align-items: center;
  text-decoration: none;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding-left: 20px;
}
.navigation-items + .navigation-items{
  margin-top: 1rem;
}
.navigation-items:hover {
  background-color: rgba(177, 174, 174, 0.596);
}
.navigation-items-separator {
  border-bottom: 0.5px solid #cec9c9;
}
.navigation-items>p {
  padding: 15px 0 15px 20px;
  color: black;
  font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
  font-size: 15px;
}
.navigation-show{
  margin-left: 0;
  transition: margin-left 2s ease;
  z-index:3;
}
.material-icons{
  margin: 10px;
  color: rgb(58, 50, 46);
}

.searcher-content input{
  width: 80%;
  border: none;
  height: 90%;
  min-width: 200px;
}

@media(min-width:400px){
  .title span {
      display: inline;
  }
}
@media(min-width: 560px){
  .searcher-header{
    display: flex;
    visibility: visible;
  }
}
@media (min-width:768px){
  body {    
    grid-template-columns: 280px 1fr;
    grid-template-areas: "header header"
                          "nav section"
  }
  nav.navigation{
    grid-area:nav;
    margin-left: 0;
    width: 100%;
    flex-direction:column;
    display:flex;
  }
  .content {
    grid-area: section;
  }
  .div-shadow {
    z-index:-5;
  }

  .searcher-header{
    display: flex;
    visibility: visible;
  }
   header div.visible-s{
     display: flex;
     visibility: visible;
   }
}

